added the pictures that I will be using in the pictures folder

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
   <body>
     <h1>Dog Show Entry Game</h1>
 
-    <p></p>
+    <p>
+      You will be given a random at the start of the game. This is the number of
+      dogs that can participate in the dog show. <br />
+      There are only four breeds showing: Shelties, Saluki's, Afghan Hounds, and
+      Chinese Crested's. Each photo is of that breed and has been assigned a
+      random number. By clicking on the photo your the number of dogs entered
+      will add up.<br />
+      To win you match the number of dogs entered to that of the max number of
+      entries. If you enter more dogs into the show than permitted you lose.
+      <br />
+      Each time when the game starts, the game all the values will change.
+    </p>
+    <div class="wins"></div>
+    <div class="lose"></div>
   </body>
 </html>
