--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
       <br />
       Each time when the game starts, the game all the values will change.
     </p>
-    <div class="wins"></div>
-    <div class="lose"></div>
+
+    <div class="entries"></div>
+    <div class="results">
+      <div class="wins"></div>
+      <div class="lose"></div>
+    </div>
   </body>
+  <script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"
+  ></script>
+  <script src="./assets/javascript/game.js"></script>
 </html>
