adjusted the height and width of the images; one image took up the entire page. They have been adjusted to 150px by 150px.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         alt="dogOne"
       />
       <img
-        src="assets/images/Saluki.jpg"
+        src="assets/images/Saluki-2.jpg"
         class="dogImage"
         id="Saluki"
         alt="dogTwo"
