created the on click function for #afghan were it shows the ran1 number in the console log

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
       </h2>
     </div>
     <div class="results">
-      <div class="winsAnd Losses">
+      <div class="winsAndLosses">
         <h2>
+          <span id="winLose"></span>
+          <br />
           Wins:
           <span id="numberWins"></span>
           <br />
@@ -44,25 +46,25 @@
       <img
         src="assets/images/Afghan.jpg"
         class="dogImage"
-        id="Afghan"
+        id="afghan"
         alt="dogOne"
       />
       <img
         src="assets/images/Saluki-2.jpg"
         class="dogImage"
-        id="Saluki"
+        id="saluki"
         alt="dogTwo"
       />
       <img
         src="assets/images/Sheltie.jpg"
         class="dogImage"
-        id="Sheltie"
+        id="sheltie"
         alt="dogThree"
       />
       <img
         src="assets/images/Chinese-Crested.jpg"
-        class="dogimage"
-        id="Crested"
+        class="dogImage"
+        id="crested"
         alt="dogFour"
       />
     </div>
