added where splash text would go for when the player wins and loses. It is not functioning code as it is commented out.

--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
       <div class="winsAndLosses">
         <br />
         <h2>
-          <span id="winLose"></span>
-          <br />
+        <!--- <span id="winLose"></span> This where the splash text will go-->
           Wins:
           <span id="numberWins"></span>
           <br />
